# cloudflare-worker-example

./: .gitignore  Cargo.toml  README.md  bulk.sh  example-users.json  package-lock.json  package.json  run.sh  user.schema.json  users.schema.json  wrangler.toml
src/: errors.rs  lib.rs  movie.rs  query.rs  schema.rs  user.rs  utils.rs
