[package]
name = "dan-wasm"
version = "0.1.0"
authors = ["dan@cipherstash.com"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "0.1.2"
worker = "0.0.10"
serde_json = "1.0.67"
ore-rs = { git = "https://github.com/cipherstash/ore.rs" }
getrandom = { version = "0.2", features = ["js"] }
rand_chacha = "0.3.1"
hex-literal = "0.3.4"
hex = "0.4.3"
cipherstash-client = { version = "0.3.0", path = "/Users/dan/Projects/CipherStash/cipherstash-rs/packages/cipherstash-client" }
# Pin this version as both worker and grpc-web-client use it
# And if the version is different then we will get linking errors (weird C + WASM shit)
wasm-streams = { version = "0.2.3" }
thiserror = "1.0.32"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

[dependencies.uuid]
version = "1.1.2"
features = ["v4"]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
