[package]
name = "cipherstash-demo"
version = "0.1.0"
authors = ["dan@cipherstash.com"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "0.1.2"
worker = "0.0.10"
serde = "1.0.143"
serde_json = "1.0.67"
hex = "0.4.3"
cipherstash-client = { version = "0.4.0-beta.2" }
# Pin this version as both worker and grpc-web-client use it
# And if the version is different then we will get linking errors (weird C + WASM issues)
wasm-streams = { version = "0.2.3" }
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }
chrono = { version = "0.4.22", features = [ "serde" ] }

[dependencies.uuid]
version = "1.1.2"
features = ["v4", "serde"]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
